# ChangeLog for dev-util/desktop-file-utils
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/desktop-file-utils/ChangeLog,v 1.14 2004/10/03 22:52:34 gmsoft Exp $

  04 Oct 2004; Guy Martin <gmsoft@gentoo.org> desktop-file-utils-0.8.ebuild:
  Added ~hppa to KEYWORDS.

  30 Sep 2004; Stephen P. Becker <geoman@gentoo.org>
  desktop-file-utils-0.8.ebuild:
  added ~mips keyword

  22 Sep 2004; Alastair Tse <liquidx@gentoo.org>
  +files/desktop-file-utils-0.8-noemacs.patch, -desktop-file-utils-0.7.ebuild,
  desktop-file-utils-0.8.ebuild:
  disable installing of emacs mode file (#60754)

*desktop-file-utils-0.8 (16 Sep 2004)

  16 Sep 2004; Brandon Hale <tseng@gentoo.org> +desktop-file-utils-0.8.ebuild:
  Version bump.

  02 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  desktop-file-utils-0.7.ebuild:
  Keyworded ~sparc wrt #62665

  14 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> desktop-file-utils-0.7.ebuild:
  Fixed access violation with lispdir. This closes bug #59172.

  08 Aug 2004; David Holm <dholm@gentoo.org> desktop-file-utils-0.7.ebuild:
  What happened to ~ppc!?

  05 Aug 2004; Tom Martin <slarti@gentoo.org> desktop-file-utils-0.7.ebuild:
  Marked ~amd64. Thanks to Gabriel Ebner <ge@gabrielebner.at> for reporting in
  bug 59515.

*desktop-file-utils-0.7 (02 Aug 2004)

  02 Aug 2004; Brandon Hale <tseng@gentoo.org> +desktop-file-utils-0.7.ebuild:
  Version bump, closes #56645

*desktop-file-utils-0.5 (21 Mar 2004)

  21 Mar 2004; Markus Nigbur <pyrania@gentoo.org>
  desktop-file-utils-0.5.ebuild:
  Version bump. Closing #42624.

  08 Mar 2004; Jon Portnoy <avenj@gentoo.org> desktop-file-utils-0.3.ebuild :
  AMD64 keywords.

  17 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org>
  desktop-file-utils-0.3.ebuild:
  set ppc in keywords

*desktop-file-utils-0.3 (01 Mar 2003)

  01 Mar 2003; Alastair Tse <liquidx@gentoo.org> desktop-file-utils-0.3.ebuild files/digest-desktop-file-utils-0.3 :