@@ -1,9 +1,11 @@
-MD5 8a828e467dcea932b362d7c0e5e6fb4c ChangeLog 2075
 MD5 d304b02e23a640ad390b88bd85cec876 desktop-file-utils-0.3.ebuild 853
 MD5 5989d08b061650b07914c7e8375bd83b desktop-file-utils-0.5.ebuild 853
 MD5 c96da4ca1c08b3b0bf7c9f6f8606e0a1 desktop-file-utils-0.8.ebuild 945
 MD5 8f906ffe0aa837e5e26fe03af3043461 metadata.xml 219
-MD5 a5b7ad2bec794347c2aa4fd97ccb4228 files/desktop-file-utils-0.8-noemacs.patch 417
+MD5 0eb4d731c7a0c703476cd352296442ea ChangeLog 2223
+MD5 d3ce40f52a7fd361d315877df8f1f94e desktop-file-utils-0.9.ebuild 951
 MD5 d5fb44d1f502de66b26adb38f8cb552e files/digest-desktop-file-utils-0.3 74
 MD5 3ec40b5b7c9a78f971f6208e41e847c0 files/digest-desktop-file-utils-0.5 74
 MD5 8b13236a7cbb85cbf2a4d9ba99adfacd files/digest-desktop-file-utils-0.8 74
+MD5 a5b7ad2bec794347c2aa4fd97ccb4228 files/desktop-file-utils-0.8-noemacs.patch 417
+MD5 f7113107af039bf8cf5156ecc74e62f5 files/digest-desktop-file-utils-0.9 74
